[package]
name = "battop"
version = "0.2.1"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Interactive batteries viewer"
homepage = "https://github.com/svartalf/rust-battop"
repository = "https://github.com/svartalf/rust-battop"
readme = "README.md"
categories = ["os"]
keywords = ["tui", "battery", "linux", "macos"]
license = "Apache-2.0 OR MIT"
exclude = ["assets"]

[badges]
travis-ci = { repository = "svartalf/rust-battop", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
battery = "0.7.0"
structopt = { version = "0.2", default-features = false }
log = "0.4.6"
stderrlog = "0.4.1"
tui = "0.5.0"
termion = "1.5.1"
itertools = "0.8.0"
humantime = "1.2.0"
