[package]
name = "battop"
version = "0.3.0"
authors = ["svartalf <self@svartalf.info>"]
edition = "2018"
description = "Interactive batteries viewer"
homepage = "https://github.com/svartalf/rust-battop"
repository = "https://github.com/svartalf/rust-battop"
readme = "README.md"
categories = ["os"]
keywords = ["tui", "battery", "linux", "macos"]
license = "Apache-2.0 OR MIT"
exclude = ["assets"]

[badges]
travis-ci = { repository = "svartalf/rust-battop", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
battery = { version = "0.7.1", git = "https://github.com/svartalf/rust-battery.git" }
structopt = { version = "0.2", default-features = false }
log = "0.4"
stderrlog = "0.4"
tui = { version = "0.6", default-features = false, features = ["crossterm"] }
crossterm = "^0.9"
itertools = "0.8.0"
humantime = "1.2.0"
